@@ -92,3 +92,4 @@ Version 1.1
  - Fixed Issue 383 - Update Remotec ZXT-120 Config file thanks to yy.bendavid & gizmocuz (Alex)
  - Fixed Issue 392 - Add Qubino ZMNHJA2 Config file thanks to nicoserveur (Alex)
  - Fixed Issue 394 - Add 2GIG CT100 USA version device thanks to mldkfa (Alex)
+ - Fixed Issue 387 - Add Zipato RFID Config file thanks to jeanfrancois.auger (Alex)
